compilers/ID/cool/regression/BASE_cgtest/old_cool/case2.cl.stderr
"./BASE_cgtest/case2.cl", line 9: parse error at or near ESAC
Compilation halted due to lex and parse errors
